--- a/운영체제 구조 및 커널.md
+++ b/운영체제 구조 및 커널.md
@@ -1,4 +1,4 @@
-운영체제는 여러 구성 요소로 이루어져 있으며, 이 중 가장 핵심적인 부분이 **커널(Kernel)**입니다.
+운영체제는 여러 구성 요소로 이루어져 있으며, 이 중 가장 핵심적인 부분이 커널(Kernel)입니다.
 
 📌 1. 운영체제의 계층적 구조 (OS Structure)
 
@@ -14,7 +14,7 @@
 	•	모든 시스템 호출(System Call)이 커널 모드에서 실행됨
 
 	💡 시스템 호출(System Call):
-응용 프로그램이 운영체제의 기능(파일 입출력, 프로세스 생성 등)을 사용하기 위해 호출하는 인터페이스.
+	응용 프로그램이 운영체제의 기능(파일 입출력, 프로세스 생성 등)을 사용하기 위해 호출하는 인터페이스.
 
 📌 2. 커널(Kernel)의 역할과 기능
 
@@ -57,16 +57,16 @@
 
 📌 4 .커널(Kernel)의 작동방식
 
-운영체제의 **커널(Kernel)**은 컴퓨터의 하드웨어를 직접 제어하며, 프로세스, 메모리, 파일 시스템 등을 관리하는 소프트웨어의 핵심 계층입니다. 하지만 “커널이 어떻게 작동하는가?“를 이해하려면 컴퓨터의 동작 원리와 소프트웨어에서 하드웨어로 명령이 전달되는 과정을 살펴봐야 합니다.
+운영체제의 커널(Kernel)은 컴퓨터의 하드웨어를 직접 제어하며, 프로세스, 메모리, 파일 시스템 등을 관리하는 소프트웨어의 핵심 계층입니다. 하지만 “커널이 어떻게 작동하는가?“를 이해하려면 컴퓨터의 동작 원리와 소프트웨어에서 하드웨어로 명령이 전달되는 과정을 살펴봐야 합니다.
 
 (1) 커널의 실행 환경: 기계어와 어셈블리 코드
-	•	커널은 CPU가 직접 실행할 수 있도록 **기계어(Machine Code)**로 번역되어 실행됩니다.
+	•	커널은 CPU가 직접 실행할 수 있도록 기계어(Machine Code)로 번역되어 실행됩니다.
 	•	하지만 기계어는 인간이 작성하기 어렵기 때문에 보통 C 언어와 어셈블리(Assembly) 언어로 작성됩니다.
 	•	C 언어: 고급 프로그래밍 언어로 커널의 대부분을 구현
 	•	어셈블리어: 하드웨어를 직접 제어하는 일부 코드 (ex. CPU 레지스터 조작)
-	•	이후 **컴파일러(GCC 등)**가 C 코드와 어셈블리 코드를 기계어로 변환하여 실행 파일을 생성합니다.
+	•	이후 컴파일러(GCC 등)가 C 코드와 어셈블리 코드를 기계어로 변환하여 실행 파일을 생성합니다.
 
-💡 커널 코드는 어떻게 실행될까?
+	💡 커널 코드는 어떻게 실행될까?
 	1.	C/어셈블리로 작성된 커널 코드 → 기계어로 컴파일
 	•	gcc -o kernel.bin kernel.c
 	2.	컴파일된 기계어가 메모리에 적재(로딩)
@@ -78,13 +78,13 @@
 
   1. 응용 프로그램이 커널에 요청하는 방법: 시스템 호출(System Call)
 사용자가 실행하는 모든 프로그램(예: 웹 브라우저, 텍스트 편집기)은 운영체제의 기능을 직접 사용할 수 없습니다.
-대신 **시스템 호출(System Call)**을 통해 커널에게 요청합니다.
+대신 시스템 호출(System Call)을 통해 커널에게 요청합니다.
 
 📌 시스템 호출 과정
 (1) 사용자 프로그램 → (2) 운영체제 API → (3) 시스템 호출 → (4) 커널 모드 → (5) 하드웨어 제어 → (6) 결과 반환
 
   2. 하드웨어와의 통신: 인터럽트(Interrupt)
-CPU와 하드웨어는 **인터럽트(Interrupt)**를 통해 커널과 통신합니다.
+CPU와 하드웨어는 인터럽트(Interrupt)를 통해 커널과 통신합니다.
 	•	하드웨어 인터럽트: 키보드 입력, 마우스 클릭, 네트워크 데이터 도착 등의 이벤트 발생 시 CPU에게 알림
 	•	소프트웨어 인터럽트: 프로그램이 특정 요청(예: printf())을 보낼 때 발생
 
@@ -96,8 +96,7 @@ CPU와 하드웨어는 **인터럽트(Interrupt)**를 통해 커널과 통신합
 (3) 커널이 명령을 수행하는 단계 (명령 실행 과정)
 커널이 어떻게 명령을 수행하는지, 아래 흐름을 통해 이해할 수 있습니다.
 
-💡 예제: “Hello, World!” 출력 과정
-
+	💡 예제: “Hello, World!” 출력 과정
 사용자가 printf("Hello, World!");를 실행할 때 커널이 수행하는 과정입니다.
 	1.	사용자 프로그램 실행
 	2.	printf() 함수는 내부적으로 write() 시스템 호출을 사용하여 커널에 요청
@@ -129,7 +128,7 @@ write() 실행 → 드라이버 호출 → 하드웨어 처리
 
 🔑 키워드: 시스템 호출, 라이브러리, API, 커널 통신
 
-운영체제는 애플리케이션이 직접 하드웨어에 접근하는 것을 제한하기 위해 **시스템 호출(System Call)**을 제공합니다.
+운영체제는 애플리케이션이 직접 하드웨어에 접근하는 것을 제한하기 위해 시스템 호출(System Call)을 제공합니다.
 	•	애플리케이션 → 운영체제 API → 시스템 호출 → 커널
 	•	예를 들어, 파일을 읽는 경우:
 	1.	fopen("file.txt") (C 라이브러리 호출)
@@ -170,5 +169,5 @@ write() 실행 → 드라이버 호출 → 하드웨어 처리
 ✅ 정리
 	•	운영체제는 사용자 모드와 커널 모드로 실행되며, 커널은 OS의 핵심 역할을 담당합니다.
 	•	커널의 구조는 모놀리식, 마이크로커널, 하이브리드 커널 등으로 나뉩니다.
-	•	**시스템 호출(System Call)**을 통해 애플리케이션이 운영체제 기능을 사용합니다.
+	•	시스템 호출(System Call)을 통해 애플리케이션이 운영체제 기능을 사용합니다.
 	•	부팅 과정에서 BIOS → 부트로더 → 커널 로드 → 시스템 초기화 단계를 거쳐 OS가 실행됩니다.
